--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -19,10 +19,6 @@
 ; SobiPro 1.1
 ;=========
 
-
-SP.PN.GO="Go!"
-SP.LISTING_LIMIT="Limit on site"
-
 ; Joomla Menu Manager
 SOBI_SELECT_ENTRY="Select Entry"
 SOBI_SELECT_ENTRY_EXPL="Or you can select an entry to which you would like to link to"
@@ -35,7 +31,8 @@ SP.HEADER_FIELD_POSITION="Position"
 SP.EMN_ORDER_BY="Order by"
 SP.SHOW_YES="Show"
 SP.SHOW_NO="Hide"
-
+SP.PN.GO="Go!"
+SP.LISTING_LIMIT="Limit on site"
 
 ; Toolbar
 SP.TB.SAVE_ONLY="Save"
@@ -246,45 +243,70 @@ SP.SECN.CFG.SECTION_DESCRIPTION="Description"
 SP.SECN.CFG.ADD_SECTION_META_DATA="Add Meta Data"
 SP.SECN.CFG.PUBLISHING="Publishing"
 
-;; General Options
+;; Template
+SP.SECN.CFG.TEMPLATE_DATA="Template"
+SP.SECN.CFG.WARNING="Please note, that the template settings can be overwritten completely or partially by specific template configuration files. Also customized templates may ignore some of these settings and behave otherwise."
+SP.SECN.CFG.SECTION_TEMPLATE="Used Template"
+SP.SECN.CFG.SHOW_TOP_MENU="Top Menu"
+SP.SECN.CFG.PARSE_TPL_CONTENT="Parse Output"
+
+;;; Category
+SP.SECN.CFG.SHOW_CATEGORY_DESC="Description"
+SP.SECN.CFG.PARSE_CATEGORY_DESC="Parse Description"
+SP.SECN.CFG.SHOW_CATEGORY_ICONS="Icons"
+SP.SECN.CFG.SHOW_CATEGORY_INTROTEXT="Introtext"
+SP.ORDER_BY_NAME_ASCENDING="Name ascending"
+SP.ORDER_BY_NAME_DESCENDING="Name descending"
+SP.ORDER_BY_POSITION_ASCENDING="Position ascending"
+SP.ORDER_BY_POSITION_DESCENDING="Position descending"
+SP.ORDER_BY_POPULARITY_ASCENDING="Least popular first"
+SP.ORDER_BY_POPULARITY_DESCENDING="Most popular first"
+SP.ORDER_BY_CREATION_DATE_ASC="Oldest first"
+SP.ORDER_BY_CREATION_DATE_DESC="Newest first"
+SP.ORDER_BY_UPDATE_DATE_ASC="Least recently modified first"
+SP.ORDER_BY_UPDATE_DATE_DESC="Recently modified first"
+SP.ORDER_BY_EXPIRATION_DATE_ASC="Expires next first"
+SP.ORDER_BY_EXPIRATION_DATE_DESC="Expires next last"
+SP.SECN.CFG.CLISTING_SETTINGS="Category Settings"
+SP.SECN.CFG.ELISTING_SETTINGS="Entry Settings"
+SP.SECN.CFG.PASS_TO_TEMPLATE="Pass also to Template"
+SP.SECN.CFG.PASS_CAT_DESC_TO_TEMPLATE="Description of Subcategories"
+SP.SECN.CFG.PASS_CAT_DATA_TO_TEMPLATE="Meta Data of Subcategories"
+SP.SECN.CFG.PASS_SUBCATS_TO_TEMPLATE="Sub-Subcategories"
+SP.SECN.CFG.CATEGORY_SETTINGS="Subcategory Settings"
+SP.SECN.CFG.SUBCATEGORY_SETTINGS="Sub-Subcategory Settings"
+SP.SECN.CFG.NUMBER_CATS_LINE="Number per Line"
+SP.SECN.CFG.NUMBER_SUBCATS="Number of Sub-Subcategories"
+
+;;; Entry
 SP.SECN.CFG.STOP_PUBLISHING_ENTRY_AFTER="Stop publishing after"
 SP.DAYS="days"
 SP.SECN.CFG.ENTRY_TITLE_FIELD="Name Field"
-SP.SECN.CFG.SHOW_CATEGORY_ICONS="Icons"
-SP.SECN.CFG.SHOW_CATEGORY_INTROTEXT="Introtext"
-SP.SECN.CFG.SHOW_CATEGORY_DESC="Description"
-SP.SECN.CFG.PARSE_CATEGORY_DESC="Parse Description"
-SP.SECN.CFG.ENTRY_SETTINGS="Entry Settings"
-
-;; Template
-SP.ORDER_BY_NAME_ASCENDING="Name ascending"
-SP.ORDER_BY_NAME_DESCENDING="Name descending"
-SP.ORDER_BY_COUNT_ASCENDING="Counter ascending"
-SP.ORDER_BY_COUNT_DESCENDING="Counter descending"
-SP.ORDER_BY_POSITION_ASCENDING="Position ascending"
-SP.ORDER_BY_POSITION_DESCENDING="Position descending"
-SP.ORDER_BY_POPULARITY_ASCENDING="Popularity ascending"
-SP.ORDER_BY_POPULARITY_DESCENDING="Popularity descending"
-SP.ORDER_BY_CREATION_DATE_ASC="Creation date ascending"
-SP.ORDER_BY_CREATION_DATE_DESC="Creation date descending"
-SP.ORDER_BY_UPDATE_DATE_ASC="Last update date ascending"
-SP.ORDER_BY_UPDATE_DATE_DESC="Last update date descending"
-SP.ORDER_BY_EXPIRATION_DATE_ASC="Expiration date ascending"
-SP.ORDER_BY_EXPIRATION_DATE_DESC="Expiration date descending"
-SP.SECN.CFG.TEMPLATE_DATA="Template"
-SP.SECN.CFG.CLISTING_SETTINGS="Category Settings"
-SP.SECN.CFG.ELISTING_SETTINGS="Entry Settings"
-
-SP.SEC.CFG.NUMBER_CATS_LINE="Number of Categories per Line"
+SP.SECN.CFG.ENTRY_SETTINGS="vCard Settings"
+SP.SECN.CFG.NUMBER_ENTRIES_PAGE="Number per Page"
+SP.SECN.CFG.NUMBER_ENTRIES_LINE="Number per Line"
 SP.SECN.CFG.ORDER_CATEGORIES_BY="Order by"
-SP.SECN.CFG.PASS_CAT_DESC_TO_TEMPLATE="Pass Description to Template"
-SP.SECN.CFG.PASS_CAT_DATA_TO_TEMPLATE="Pass Meta Data to Template"
-SP.SEC.CFG.PASS_SUBCATS_TO_TEMPLATE="Pass Subcategories to Template"
 SP.SECN.CFG.ORDER_ENTRIES_BY="Order by"
-SP.SEC.CFG.NUMBER_ENTRIES_PAGE="Number of Entries per Page"
-SP.SEC.CFG.NUMBER_ENTRIES_LINE="Number of Entries per Line"
-SP.SECN.CFG.PASS_ENTRY_META_TEMPLATE="Pass Meta Data to Template"
-SP.SEC.CFG.PASS_SEL_CATS_OF_ENTRY_TO_TEMPLATE="Pass Selected Categories of an Entry to Template"
+SP.SECN.CFG.PASS_TO_VCARD="Pass also to vCard Template"
+SP.SECN.CFG.PASS_ENTRY_META_TEMPLATE="Meta Data"
+SP.SECN.CFG.PASS_SEL_CATS_OF_ENTRY_TO_TEMPLATE="Selected Categories of an Entry"
+SP.SECN.CFG.ENTRY_ORDER_BY_POSITION_ASCENDING="Position ascending"
+SP.SECN.CFG.ENTRY_ORDER_BY_POSITION_DESCENDING="Position descending"
+SP.SECN.CFG.ENTRY_ORDER_BY_POPULARITY_ASCENDING="Least popular first"
+SP.SECN.CFG.ENTRY_ORDER_BY_POPULARITY_DESCENDING="Most popular first"
+SP.SECN.CFG.ENTRY_ORDER_BY_CREATION_DATE_ASC="Oldest first"
+SP.SECN.CFG.ENTRY_ORDER_BY_CREATION_DATE_DESC="Newest first"
+SP.SECN.CFG.ENTRY_ORDER_BY_UPDATE_DATE_ASC="Least recently modified first"
+SP.SECN.CFG.ENTRY_ORDER_BY_UPDATE_DATE_DESC="Recently modified first"
+SP.SECN.CFG.ENTRY_ORDER_BY_EXPIRATION_DATE_ASC="Expires next first"
+SP.SECN.CFG.ENTRY_ORDER_BY_EXPIRATION_DATE_DESC="Expires next last"
+
+;;; Alpha Listing
+SP.SECN.CFG.SHOW_ALPHA_MENU="Menu"
+SP.SECN.CFG.SHOW_ALPHA_VERIFY="Verify Links"
+SP.SECN.CFG.ALPHA_LETTERS="Letters"
+SP.SECN.CFG.ALPHA_FIELD="Primary Field"
+SP.SECN.CFG.ALPHA_FIELDS="Additional Fields"
 
 ;; Security
 SP.SECN.CFG.SECURITY_SETTINGS="Security"
