--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -240,7 +240,6 @@ SP.SECN.CFG.SECTION_CONFIGURATION="Section"
 SP.SECN.CFG.SECTION_NAME="Name"
 SP.SECN.ADD_SECTION_ALIAS="Alias"
 SP.SECN.CFG.SECTION_DESCRIPTION="Description"
-SP.SECN.CFG.ADD_SECTION_META_DATA="Add Meta Data"
 SP.SECN.CFG.PUBLISHING="Publishing"
 
 ;; Template
@@ -307,6 +306,24 @@ SP.SECN.CFG.SHOW_ALPHA_VERIFY="Verify Links"
 SP.SECN.CFG.ALPHA_LETTERS="Letters"
 SP.SECN.CFG.ALPHA_FIELD="Primary Field"
 SP.SECN.CFG.ALPHA_FIELDS="Additional Fields"
+
+;; Meta Data
+SP.SECN.CFG.META_DATA_ADD="Add Meta Data"
+SP.SECN.CFG.META_DATA_SECTION="Section Main View"
+SP.SECN.CFG.META_DATA_INPUT="Entry Input Form"
+SP.SECN.CFG.META_DATA_SEARCH="Search Form"
+
+;; Redirects
+SP.SECN.CFG.REDIRECT_INFO="Redirects for specific SobiPro views if access is either prohibited by ACL or should lead to another page than the default one."
+SP.SECN.CFG.REDIRECT_SECTION="Section Views"
+SP.SECN.CFG.REDIRECT_CATEGORY="Category Views"
+SP.SECN.CFG.REDIRECT_ENTRY="Entry Views"
+SP.SECN.CFG.REDIRECTS_ENTRY_SPACER="Details View"
+SP.SECN.CFG.REDIRECTS_CAT_SPACER="Category Views"
+SP.SECN.CFG.REDIRECTS_SECTION_SPACER="Section Main View"
+SP.SECN.CFG.REDIRECTS_SEARCH_SPACER="Search Form"
+SP.SECN.CFG.REDIRECTS_INPUT="Entry Input Form"
+SP.SECN.CFG.REDIRECTS_SAVE="Save Entry Input"
 
 ;; Security
 SP.SECN.CFG.SECURITY_SETTINGS="Security"
@@ -675,8 +692,8 @@ SP.SEC.CFG.REDIRECTS="Redirects"
 SP.SEC.CFG.REDIRECTS_ENTRY_SPACER="Unauthorized Access to an Entry"
 SP.SEC.CFG.REDIRECTS_CAT_SPACER="Unauthorized Access to a Category"
 SP.SEC.CFG.REDIRECTS_SECTION_SPACER="Unauthorized Access to a Section"
-SP.SEC.CFG.REDIRECTS_ERR_OPT="Show Standard Error Page"
-SP.SEC.CFG.REDIRECTS_RED_OPT="Redirect to Address Below"
+SP.SEC.CFG.REDIRECTS_ERR_OPT="show standard error page"
+SP.SEC.CFG.REDIRECTS_RED_OPT="redirect to address below"
 SP.SEC.CFG.REDIRECTS_DO="Behaviour"
 SP.SEC.CFG.REDIRECTS_TO="Redirect To"
 SP.SEC.CFG.REDIRECTS_MSG="Redirect Message"
