--- a/Component/branches/SobiPro-1.1/Site/changelog.txt
+++ b/Component/branches/SobiPro-1.1/Site/changelog.txt
@@ -56,6 +56,7 @@
    (#) getChilds() in model does not care about the child type
    (#) Meta author corrected to 'author'
    (#) Suffix not shown in backend
+   (#) Approved state has no effect
 
 
 -------------------
