replacement for Joomla! subtoolbar

--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -55,6 +55,11 @@ SP.TB.REVOKE="Revoke"
 SP.TB.APPROVE="Grant"
 SP.TB.ENTRY="Entry"
 SP.TB.CATEGORY="Category"
+SP.TB.OPTIONS="Options"
+SP.TB.CONTROL_PANEL="Control Panel"
+SP.TB.GLOBAL_CONFIG="Global Config"
+SP.TB.ACL="Access Control"
+SP.TB.SAM="Extensions Manager"
 
 ; Fields Manager
 SP.HEADER_FIELD_NAME="Field Name"
