replacement for Joomla! subtoolbar

--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -57,7 +57,7 @@ SP.TB.ENTRY="Entry"
 SP.TB.CATEGORY="Category"
 SP.TB.OPTIONS="Options"
 SP.TB.CONTROL_PANEL="Control Panel"
-SP.TB.GLOBAL_CONFIG="Global Config"
+SP.TB.GLOBAL_CONFIG="Global Configuration"
 SP.TB.ACL="Access Control"
 SP.TB.SAM="Extensions Manager"
 
