--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -32,7 +32,7 @@ SP.EMN_ORDER_BY="Order by"
 SP.SHOW_YES="Show"
 SP.SHOW_NO="Hide"
 SP.PN.GO="Go!"
-SP.LISTING_LIMIT="Limit on site"
+SP.LISTING_LIMIT="Page Limit"
 
 ; Toolbar
 SP.TB.SAVE_ONLY="Save"
@@ -57,9 +57,9 @@ SP.TB.ENTRY="Entry"
 SP.TB.CATEGORY="Category"
 SP.TB.OPTIONS="Options"
 SP.TB.CONTROL_PANEL="Control Panel"
-SP.TB.GLOBAL_CONFIG="Global Configuration"
-SP.TB.ACL="Access Control"
-SP.TB.SAM="Extensions Manager"
+SP.TB.GLOBAL_CONFIG="System Settings"
+SP.TB.ACL="Access Control List"
+SP.TB.SAM="Application Manager"
 
 ; Fields Manager
 SP.HEADER_FIELD_NAME="Field Name"
