--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.messages.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.messages.ini
@@ -15,5 +15,5 @@
 ; $Author: Sigrid Suski $
 ; $HeadURL: https://svn.suski.eu/SobiPro/Component/trunk/Site/usr/locale/adm/en-GB.com_sobipro.js.ini $
 
-SP.WARNING.NO_NAME_FIELD_SELECTED="<b>Warning!</b>: Please select a name field for this section"
-SP.WARNING.ENTRIES_BASE_DATA_INCOMPLETE="<b>Warning!</b>: Some entries are missing base data. Please check your configuration"
+SP.WARNING.NO_NAME_FIELD_SELECTED="<b>Warning</b>: Please select a name field for this section!"
+SP.WARNING.ENTRIES_BASE_DATA_INCOMPLETE="<b>Warning</b>: Some entries are missing base data. Please check the configuration."
