Pagination für Entries und Categories gestyled Pagination for Fields begonnen

--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -55,7 +55,7 @@ SP.TB.REVOKE="Revoke"
 SP.TB.APPROVE="Grant"
 SP.TB.ENTRY="Entry"
 SP.TB.CATEGORY="Category"
-SP.TB.OPTIONS="Options"
+SP.TB.OPTIONS="Menu"
 SP.TB.CONTROL_PANEL="Control Panel"
 SP.TB.GLOBAL_CONFIG="System Settings"
 SP.TB.ACL="Access Control List"
@@ -90,6 +90,7 @@ SP.FMN.STATE_CHANGE_NO_ID="Please select field first."
 
 ; Fields
 SP.FIELD_WARN_DUPLICATE_OPT_ID="Some option Ids are used several times; a random option Id has been generated."
+SP.FM.ADD_FIELD="Add new &#34;var:[field_type]&#34; field"
 SP.FMN.FIELD_GENERAL="General Field Settings"
 SP.FMN.FIELD_GENERAL_URL="URL Settings"
 SP.FMN.FIELD_GENERAL_EMAIL="Email Settings"
@@ -334,7 +335,6 @@ SP.SECN.CFG.REDIRECTS_SAVE="Save Entry Input"
 SP.SECN.CFG.SECURITY_SETTINGS="Security"
 
 ; seemingly unused
-;;SP.FM.ADD_FIELD="Add New &#34;var:[field_type]&#34; Field"
 ;;;SP.FMN_ORDER_BY="Order by"
 ;SP.FMN.ORDER_BY_SHOWIN_DESC=""
 ;;;SP.FLR.MSG_FILTER_SAVED="All changes saved"
