--- a/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.ini
@@ -43,6 +43,10 @@ SP.ROBOTS="Robots"
 SP.ROBOTS_NONE="none specified"
 SP.PUBLISHED="Published"
 SP.ENTRY_NO_NAME="No name"
+SP.PN.STARTICON="<i class='icon-fast-backward'></i>"
+SP.PN.PREVIOUSICON="<i class='icon-backward'></i>"
+SP.PN.NEXTICON="<i class='icon-forward'></i>"
+SP.PN.ENDICON="<i class='icon-fast-forward'></i>"
 
 
 ;=========
@@ -142,8 +146,6 @@ SP.FD.INBOX_SEARCH_SELECT=" --- Select var:[name]  --- "
 ;=========
 SP.PN.DISPLAY="Display #"
 SP.PN.ALL="All"
-SP.PN.START="Start"
-SP.PN.PREVIOUS="Previous"
 SP.PN.START="Start"
 SP.PN.PREVIOUS="Previous"
 SP.PN.NEXT="Next"
