--- a/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.err.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.err.ini
@@ -17,6 +17,9 @@
 
 
 SP.FIELD_CC_FIXED_CID_NOT_SELECTED="Category chooser: method set to fixed id but no category id has been selected"
+SP.FILE_WRONG_TYPE="The uploaded file is not allowed by type \"%s\"."
+SP.CANNOT_UPLOAD_FILE="Cannot upload file"
+SP.CANNOT_UPLOAD_FILE_NO_DATA="No file received"
 
 ;=========
 ; SobiPro 1.0.1
