--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -193,6 +193,8 @@ SP.EMN.ORDER_BY_APPROVAL_DESC="Approved first"
 SP.EMN.ORDER_BY_ORDER_ASC="Position ascending"
 SP.EMN.ORDER_BY_ORDER_DESC="Position descending"
 SP.EMN.ORDER_BY_FIELD="By Field"
+SP.EMN.ORDER_BY_FIELD_ASC="ascending"
+SP.EMN.ORDER_BY_FIELD_DESC="descending"
 SP.EMN.ORDER_BY_OWNER="Owner (group by)"
 SP.EMN.APPROVED="Approval has been granted."
 SP.EMN.UNAPPROVED="Approval has been revoked."
