JavaScript uploader - first version done

--- a/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.ini
@@ -17,6 +17,7 @@
 
 SP.START_UPLOAD="Upload"
 SP.FILE_UPLOADED="File \"%s\" has been uploaded"
+SP.UPLOAD_SELECT="Select File"
 SP.FMN.CC_SEARCH_SELECT_CAT="Select Category"
 SP.JS_CALENDAR_MONTHS="January, February, March, April, May, June, July, August, September, October, November, December"
 SP.JS_CALENDAR_MONTHS_SHORT="Jan, Feb, Mar, Apr, May, Jun, Jul, Aug, Sep, Oct, Nov, Dec"
