section apps - XML template implemented

--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -19,6 +19,10 @@
 ; SobiPro 1.1
 ;=========
 
+SP.EXTENSIONS.HEADER_VERSION="Version"
+SP.EX.APP_ENABLED="Application \"%s\" has been enabled"
+SP.EX.APP_DISABLED="Application \"%s\" has been disabled"
+
 ; Joomla Menu Manager
 SOBI_SELECT_ENTRY="Select Entry"
 SOBI_SELECT_ENTRY_EXPL="Or you can select an entry to which you would like to link to"
