Global Configuration parse class attribute in message

--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -35,6 +35,8 @@ SP.HEADER_FIELD_POSITION="Position"
 SP.EMN_ORDER_BY="Order by"
 SP.SHOW_YES="Show"
 SP.SHOW_NO="Hide"
+SP.ONOFF_YES="On"
+SP.ONOFF_NO="Off"
 SP.PN.GO="Go!"
 SP.LISTING_LIMIT="Page Limit"
 
@@ -339,6 +341,27 @@ SP.SECN.CFG.REDIRECTS_SAVE="Save Entry Input"
 
 ;; Security
 SP.SECN.CFG.SECURITY_SETTINGS="Security"
+
+; Global Configuration
+SP.GBN.CFG.CACHE_HEAD="Optimisation"
+SP.GBN.CFG.DEB_HEAD="Debug & Error Logging"
+SP.GBN.CFG.DEB_DEBUG="Debug"
+SP.GBN.CFG.DEB_LOG="Error Logging"
+SP.GBN.CFG.DEB_XML_RAW="Raw XML Output"
+SP.GBN.CFG.DEB_XML_IP="Limit to IP"
+SP.GBN.CFG.DEB_LEVEL="Reporting Level"
+SP.GBN.CFG.DEB_DISPLAY_ERRORS="Display Errors on Screen"
+SP.GBN.CFG.INCLUDE_FILES_CACHE="Javascript & CSS Files"
+SP.GBN.CFG.COMPRESS_FILES="Compression"
+SP.GBN.CFG.COMPRESS_JS_FILES="Javascript Files"
+SP.GBN.CFG.ACCEL="<strong>Heads up!</strong> SobiPro has its own cache system for better performance. It is highly recommended to switch the SobiPro Data Accelerator on.<br/>In order to use the SobiPro Data Accelerator, you need SQLite installed on your server!"
+SP.GBN.CFG.HTML_INPUT="Predefined Security Settings"
+SP.GBN.CFG.PBY_SUPPORT="Development Support"
+SP.GBN.CFG.PAYMENTS="Payment"
+SP.GBN.CFG.PMN_VAT="Tax / VAT"
+SP.GBN.CFG.PMN_DEC_POINT="Decimal Mark"
+
+
 
 ; seemingly unused
 ;;;SP.FMN_ORDER_BY="Order by"
