Donate button in Global Config

--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -258,7 +258,7 @@ SP.SECN.CFG.PUBLISHING="Publishing"
 
 ;; Template
 SP.SECN.CFG.TEMPLATE_DATA="Template"
-SP.SECN.CFG.WARNING="Please note, that the template settings can be overwritten completely or partially by specific template configuration files. Also customized templates may ignore some of these settings and behave otherwise."
+SP.SECN.CFG.WARNING="<strong>Heads up!</strong> The template settings can be overwritten completely or partially by specific template configuration files. Also customized templates may ignore some of these settings and behave otherwise."
 SP.SECN.CFG.SECTION_TEMPLATE="Used Template"
 SP.SECN.CFG.SHOW_TOP_MENU="Top Menu"
 SP.SECN.CFG.PARSE_TPL_CONTENT="Parse Output"
@@ -357,6 +357,7 @@ SP.GBN.CFG.COMPRESS_JS_FILES="Javascript Files"
 SP.GBN.CFG.ACCEL="<strong>Heads up!</strong> SobiPro has its own cache system for better performance. It is highly recommended to switch the SobiPro Data Accelerator on.<br/>In order to use the SobiPro Data Accelerator, you need SQLite installed on your server!"
 SP.GBN.CFG.HTML_INPUT="Predefined Security Settings"
 SP.GBN.CFG.PBY_SUPPORT="Development Support"
+SP.GBN.CFG.PBY_EXPL="<strong>Heads up!</strong> If you disable the 'powered by' link from our SobiPro component, it is fair to donate for it. Developing and maintaining SobiPro is a lot of work which should be recompensed adequately.<br /><br /><a title='Donate for SobiPro' target='_blank' class='btn' href='http://sobi.it/SobiPro/Donate/'>Donate for SobiPro</a> Click on the button to donate via Paypal. Thank you."
 SP.GBN.CFG.PAYMENTS="Payment"
 SP.GBN.CFG.PMN_VAT="Tax / VAT"
 SP.GBN.CFG.PMN_DEC_POINT="Decimal Mark"
