Template info - XML template implemented

--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -22,6 +22,12 @@
 SP.EXTENSIONS.HEADER_VERSION="Version"
 SP.EX.APP_ENABLED="Application \"%s\" has been enabled"
 SP.EX.APP_DISABLED="Application \"%s\" has been disabled"
+SP.TP.VER="Version"
+SP.TP.DATE="Created at"
+SP.TP.INFO="Template Information"
+SP.TP.FILES_DECS="Files"
+SP.TP.HEAD_FILENAME="Filename"
+SP.TP.HEAD_FILE_DESC="Description"
 
 ; Joomla Menu Manager
 SOBI_SELECT_ENTRY="Select Entry"
