--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -19,16 +19,6 @@
 ; SobiPro 1.1
 ;=========
 
-SP.EXTENSIONS.HEADER_VERSION="Version"
-SP.EX.APP_ENABLED="Application \"%s\" has been enabled"
-SP.EX.APP_DISABLED="Application \"%s\" has been disabled"
-SP.TP.VER="Version"
-SP.TP.DATE="Created at"
-SP.TP.INFO="Template Information"
-SP.TP.FILES_DECS="Files"
-SP.TP.HEAD_FILENAME="Filename"
-SP.TP.HEAD_FILE_DESC="Description"
-
 ; Joomla Menu Manager
 SOBI_SELECT_ENTRY="Select Entry"
 SOBI_SELECT_ENTRY_EXPL="Or you can select an entry to which you would like to link to"
@@ -368,7 +358,18 @@ SP.GBN.CFG.PAYMENTS="Payment"
 SP.GBN.CFG.PMN_VAT="Tax / VAT"
 SP.GBN.CFG.PMN_DEC_POINT="Decimal Mark"
 
+; Applications
+SP.EXTENSIONS.HEADER_VERSION="Version"
+SP.EX.APP_ENABLED="Application \"%s\" has been enabled"
+SP.EX.APP_DISABLED="Application \"%s\" has been disabled"
 
+; Template
+SP.TP.VER="Version"
+SP.TP.DATE="Created at"
+SP.TP.INFO="Template Information"
+SP.TP.FILES_DECS="Files"
+SP.TP.HEAD_FILENAME="Filename"
+SP.TP.HEAD_FILE_DESC="Description"
 
 ; seemingly unused
 ;;;SP.FMN_ORDER_BY="Order by"
@@ -852,12 +853,12 @@ SP.ERR.NO_ERRORS="Error log is empty"
 ;=========
 ; Input filters
 ;=========
-SP.FLR.FILTER_ID="Filter ID"
+SP.FLR.FILTER_ID="Filter Id"
 SP.FLR.FILTER_NAME="Filter Name"
 SP.FLR.FILTER_VALUE="Filter Value"
 SP.FLR.EDIT_FILTER="Edit Filter"
-SP.FLR.FILTER_MSG="Error Message: "
-SP.FLR.FILTER_REGEX="Filter Code: "
+SP.FLR.FILTER_MSG="Error Message"
+SP.FLR.FILTER_REGEX="Filter Code"
 SP.FLR.SITE_TITLE="Input Filters"
 SP.FLR.SITE_HEAD="Input Filters"
 SP.FLR.SAVE_BT="Save Filter"
