--- a/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.ini
@@ -16,7 +16,7 @@
 ; $HeadURL: https://svn.suski.eu/SobiPro/Component/trunk/Site/usr/locale/site/en-GB.com_sobipro.ini $
 
 SP.START_UPLOAD="Upload"
-SP.FILE_UPLOADED="File \"%s\" has been uploaded"
+SP.FILE_UPLOADED="File \"%s\" has been uploaded."
 SP.UPLOAD_SELECT="Select File"
 SP.FMN.CC_SEARCH_SELECT_CAT="Select Category"
 SP.JS_CALENDAR_MONTHS="January, February, March, April, May, June, July, August, September, October, November, December"
