Layout Section Applications

--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -360,8 +360,10 @@ SP.GBN.CFG.PMN_DEC_POINT="Decimal Mark"
 
 ; Applications
 SP.EXTENSIONS.HEADER_VERSION="Version"
-SP.EX.APP_ENABLED="Application \"%s\" has been enabled"
-SP.EX.APP_DISABLED="Application \"%s\" has been disabled"
+SP.EX.APP_ENABLED="Application \"%s\" has been enabled."
+SP.EX.APP_DISABLED="Application \"%s\" has been disabled."
+SP.EX.HEADER_NAME="Name"
+SP.EX.HEADER_TYPE="Type"
 
 ; Template
 SP.TP.VER="Version"
@@ -1048,7 +1050,7 @@ SP.EX.GLOBAL_APPLICATION_TYPE="global application"
 SP.EX.EXTENSION_HAS_BEEN_INSTALLED="New var:[type] &#34;var:[name]&#34; has been installed"
 SP.EX.EXTENSION_HAS_BEEN_REMOVED="var:[type] &#34;var:[name]&#34; has been removed"
 SP.EXTENSIONS.HEADER_CHECKBOX=""
-SP.EXTENSIONS.HEADER_PID="ID"
+SP.EXTENSIONS.HEADER_PID="Id"
 SP.EXTENSIONS.HEADER_NAME="Application Name"
 SP.EXTENSIONS.HEADER_TYPE="Application Type"
 SP.EXTENSIONS.HEADER_VERSION="Version"
@@ -1100,14 +1102,14 @@ SP.AMN.APPS_SECTION_HEAD="Section Applications"
 SP.AMN.APPS_SECTION_TPL="Section Template"
 SP.AMN.APPS="Applications"
 SP.EX.SECTION="Application Manager"
-SP.EX.SECTION_EXPL="You can activate or deactivate here applications listed below for the &#34;var:[section]&#34; section"
+SP.EX.SECTION_EXPL="You can activate or deactivate here applications listed below for the &#34;var:[section]&#34; section."
 SP.UPD.UPDATE_AVAILABLE="New version &#34;%s&#34; is available"
 SP.UPD.UP_TO_DATE="Current version is up to date"
 SP.APP.BANK_TRANSFER="Bank Payment"
 SP.APP.PAYPAL="PayPal Payment"
 SP.APP.BANK_TRANSFER_NAME="Bank Payment Settings"
 SP.APP.BANK_TRANSFER_DATA="Bank Account/eCheck Data"
-SP.APP.BANK_TRANSFER_DATA_EXPL="Enter the data of your bank account with the text that should be presented at the payment screen"
+SP.APP.BANK_TRANSFER_DATA_EXPL="Enter the data of your bank account with the text that should be presented at the payment screen."
 SP.APP.PPP_NAME="PayPal Payment Settings"
 SP.APP.PPP_URL="Paypal URL"
 SP.APP.PPP_EMAIL="Recipient Email Address"
