weils so schön war

--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -368,10 +368,14 @@ SP.EX.HEADER_TYPE="Type"
 ; Template
 SP.TP.VER="Version"
 SP.TP.DATE="Created at"
-SP.TP.INFO="Template Information"
-SP.TP.FILES_DECS="Files"
+SP.TP.FILES_DECS="Template Files"
 SP.TP.HEAD_FILENAME="Filename"
 SP.TP.HEAD_FILE_DESC="Description"
+SP.TP.AUTHORURL="Author"
+SP.TP.COPYR="Copyright"
+SP.TP.LIC="License"
+SP.TP.DESC="Description"
+
 
 ; seemingly unused
 ;;;SP.FMN_ORDER_BY="Order by"
@@ -1318,7 +1322,7 @@ SP.FM.EMAIL_SPEC_PARAMS="Email Specific Parameters"
 SP.TP.EDIT_SITE_TITLE="Edit Template File: var:[path]"
 SP.TP.EDITING_FILE="Editing File: "
 SP.TP.INFO_SITE_TITLE="Template &#34;var:[template]&#34;"
-SP.TP.INFO="Template Info"
+SP.TP.INFO="Template Information"
 SP.TP.TEMPLATE_NAME="Template Name"
 SP.TP.AUTHOR="Author:"
 SP.TP.AUTHOR_URL="Author URL:"
@@ -1330,7 +1334,7 @@ SP.TP.FILES="Template Files:"
 SP.TP.TEMPLATES_OVERRIDE="Templates Override"
 SP.TP.CLONE_NOTE="Template based on var:[name], duplicated at var:[date]."
 SP.TP.EDIT_SOBIPRO_TEMPLATE="SobiPro Template: "
-SP.TP.TEMPLATE_HAS_BEEN_INSTALLED="Template var:[template] has been installed"
+SP.TP.TEMPLATE_HAS_BEEN_INSTALLED="Template var:[template] has been installed."
 
 ;=========
 ; Messages
