adapt layout to IE

--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -1339,8 +1339,8 @@ SP.TP.TEMPLATE_HAS_BEEN_INSTALLED="Template var:[template] has been installed."
 ;=========
 ; Messages
 ;=========
-SP.MSG.OBJ_SAVED="var:[type] has been saved"
-SP.MSG.OBJ_CLONED="var:[type] has been duplicated. You are currently editing the duplicated var:[type]"
-SP.MSG.HELP_ADD_CORE_REPO="You must add the SobiPro Core repository to access the documentation"
-SP.MSG.CONFIG_SAVED="Configuration has been saved"
+SP.MSG.OBJ_SAVED="var:[type] has been saved."
+SP.MSG.OBJ_CLONED="var:[type] has been duplicated. You are currently editing the duplicated var:[type]."
+SP.MSG.HELP_ADD_CORE_REPO="You must add the SobiPro Core repository to access the documentation."
+SP.MSG.CONFIG_SAVED="Configuration has been saved."
 
