cpanel - final version (unstylled)

--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -19,6 +19,20 @@
 ; SobiPro 1.1
 ;=========
 
+SP.CPANEL_SYSTEM_STATUS="System Status"
+SP.CPANEL_POPULAR_ENTRIES="Popular Entries"
+SP.CPANEL_NEW_ENTRIES="New Entries"
+SP.CPANEL_EXPIRING_SOON="Expiring soon"
+SP.CPANEL_AWAITING_APPROVAL="Awaiting approval"
+SP.CPANEL_REPORTED_ISSUES="%d reported issues"
+SP.CPANEL_REPORTED_ISSUES_SHOW="Show"
+SP.CLOSE="Close"
+SP.CLOSE_X="x"
+
+SP.ENTRY.HEADER_COUNTER="Counter"
+SP.ENTRY.HEADER_SECTION="Section"
+SP.ENTRY.HEADER_CREATED_AT="Created at"
+
 ; Joomla Menu Manager
 SOBI_SELECT_ENTRY="Select Entry"
 SOBI_SELECT_ENTRY_EXPL="Or you can select an entry to which you would like to link to"
