--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.messages.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.messages.ini
@@ -17,3 +17,16 @@
 
 SP.WARNING.NO_NAME_FIELD_SELECTED="<b>Warning</b>: Please select a name field for this section!"
 SP.WARNING.ENTRIES_BASE_DATA_INCOMPLETE="<b>Warning</b>: Some entries are missing base data. Please check the configuration."
+SP.ACCELERATOR_ENABLED="SobiPro Data Accelerator is enabled"
+SP.ACCELERATOR_DISABLED="SobiPro Data Accelerator is disabled"
+SP.JS_CACHE_ENABLED="JavaScript Cache is enabled"
+SP.JS_CACHE_DISABLED="JavaScript Cache is disabled"
+SP.CSS_CACHE_ENABLED="CSS Cache is enabled"
+SP.CSS_CACHE_DISABLED="CSS Cache is disabled"
+SP.DISPLAY_ERRORS_ENABLED="Errors displaying is disabled"
+SP.DISPLAY_ERRORS_DISABLED="Errors displaying is enabled"
+SP.DEBUG_LEVEL_TOO_HIGH="Debug level is too high for a live site"
+SP.DEBUG_LEVEL_OK="Debug level is correct"
+SP.CPANEL_ISSUES_TYPE="Level"
+SP.CPANEL_ISSUES_SECTION="Affected Section"
+SP.CPANEL_ISSUES_MESSAGE="Message"
