css and JavaScript cache split

--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -361,7 +361,10 @@ SP.GBN.CFG.DEB_XML_RAW="Raw XML Output"
 SP.GBN.CFG.DEB_XML_IP="Limit to IP"
 SP.GBN.CFG.DEB_LEVEL="Reporting Level"
 SP.GBN.CFG.DEB_DISPLAY_ERRORS="Display Errors on Screen"
-SP.GBN.CFG.INCLUDE_FILES_CACHE="Javascript & CSS Files"
+;; not used anymore - split
+;;SP.GBN.CFG.INCLUDE_FILES_CACHE="Javascript & CSS Files"
+SP.GBN.CFG.INCLUDE_JS_FILES_CACHE="Javascript Files"
+SP.GBN.CFG.INCLUDE_CSS_FILES_CACHE="CSS Files"
 SP.GBN.CFG.COMPRESS_FILES="Compression"
 SP.GBN.CFG.COMPRESS_JS_FILES="Javascript Files"
 SP.GBN.CFG.ACCEL="<strong>Heads up!</strong> SobiPro has its own cache system for better performance. It is highly recommended to switch the SobiPro Data Accelerator on.<br/>In order to use the SobiPro Data Accelerator, you need SQLite installed on your server!"
