--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.messages.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.messages.ini
@@ -27,6 +27,8 @@ SP.DISPLAY_ERRORS_ENABLED="Errors displaying is disabled"
 SP.DISPLAY_ERRORS_DISABLED="Errors displaying is enabled"
 SP.DEBUG_LEVEL_TOO_HIGH="Debug level is too high for a live site"
 SP.DEBUG_LEVEL_OK="Debug level is correct"
+SP.DEBUG_XML_ENABLED="XML output is enabled"
+SP.DEBUG_XML_DISABLED="XML output is disabled"
 SP.CPANEL_ISSUES_TYPE="Level"
 SP.CPANEL_ISSUES_SECTION="Affected Section"
 SP.CPANEL_ISSUES_MESSAGE="Message"
