moved menu output to the XML definition

--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -28,6 +28,10 @@ SP.CPANEL_REPORTED_ISSUES="%d reported issues"
 SP.CPANEL_REPORTED_ISSUES_SHOW="Show"
 SP.CLOSE="Close"
 SP.CLOSE_X="x"
+SP.CPANEL_ISSUES_TYPE="Level"
+SP.CPANEL_ISSUES_SECTION="Affected Section"
+SP.CPANEL_ISSUES_MESSAGE="Message"
+
 
 SP.ENTRY.HEADER_COUNTER="Counter"
 SP.ENTRY.HEADER_SECTION="Section"
